# eso-LidarDataManager

./: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  densityCacheEstimator.cpp  lidarDataManager.cpp  main.cpp
benchmarks/: CMakeLists.txt  benchmark_processing_blocks.cpp
docker/: setup_script.bash
processingBlocks/: aliasheaderattributes.cpp  aliasheaderattributes.h  attributebasedselector.cpp  attributebasedselector.h  attributesetbasedselector.cpp  attributesetbasedselector.h  crsconversion.cpp  crsconversion.h  identityprocessor.cpp  identityprocessor.h  pointsattributesfilters.cpp  pointsattributesfilters.h  pointsnumberlimit.cpp  pointsnumberlimit.h  regionofinterestselector.cpp  regionofinterestselector.h
tests/: CMakeLists.txt  test_processing_blocks.cpp
